<resources>
    <string name="app_name">Summer Rent</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="house_small">\t\t40/5</string>
    <string name="house_big">\t\t47</string>
    <string name="past_rents">Past rents</string>
    <string name="current_rents">Current rents</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="toast_successfully_saved">Note saved!</string>
</resources>