<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CurrentFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <LinearLayout
            android:id="@+id/current_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGrey"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/current_layout_edit"
                tools:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/current_button_edit"
                    android:layout_width="200dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/button_background_light"
                    android:fontFamily="@font/josefinsansregular"
                    android:text="@string/edit"
                    android:textSize="20dip" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/current_layout_colors"
                tools:visibility="visible"
                android:visibility="gone"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50">

                    <Button
                        android:id="@+id/current_colors_green_orange"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:background="@drawable/between_green_orange"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_orange_green"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/between_orange_green"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_red_green"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/between_red_green"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_green_red"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/between_green_red"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_orange_red"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/between_orange_red"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_red_orange"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/between_red_orange"
                        android:textSize="18dip" />



                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="50">

                    <Button
                        android:id="@+id/current_colors_green"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:layout_marginTop="8dp"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:background="@color/colorMain"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_orange"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorOrange"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_red"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorRed"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_black"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="10"
                        android:fontFamily="@font/josefinsansregular"
                        android:gravity="center"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:background="@color/colorBlack"
                        android:textSize="18dip" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />



                    <View
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="2" />

                    <Button
                        android:id="@+id/current_colors_save"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="20"
                        android:text="@string/save"
                        android:textSize="17dip"
                        android:fontFamily="@font/josefinsansregular"
                        android:background="@drawable/button_background_light"
                        android:layout_marginTop="8dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginEnd="8dp"/>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@color/colorGrey"
            android:orientation="horizontal"
            android:weightSum="82"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_linear_layout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/monday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/tuesday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/wednesday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/thursday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/friday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/saturday"
                android:textSize="18dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10"
                android:fontFamily="@font/josefinsansregular"
                android:gravity="center"
                android:text="@string/sunday"
                android:textColor="@color/colorRed"
                android:textSize="18dip" />

        </LinearLayout>




        <androidx.viewpager.widget.ViewPager
            android:id="@+id/current_view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.7"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/current_card_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:theme="@style/Theme.MaterialComponents.Light"
            android:visibility="gone"
            app:cardBackgroundColor="@color/colorMainLightLight"
            app:cardCornerRadius="18dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/colorMainDark"
            app:strokeWidth="4dp">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="16dp">


                <EditText
                    android:id="@+id/current_text_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textSize="45dip"
                    tools:text=" SiemankoSiemankoSiemankoSiemanko Siemanko Siemanko SiemankoSiemankoSiemankoSiemanko" />

            </ScrollView>


        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>